# Packager.rs

./: .gitignore  Cargo.toml  README.md  install_package.sh  list_all_packages.sh  package-lock.json  search_packages.sh
.github/: code_info.md  copilot-instructions.md
.github/agents/: CodeLibrarian.agent.md
.github/workflows/: build-linux.yml
src/: main.rs
